Updating index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <head>
    <meta charset="UTF-8">
    <title>Budoucí Support System</title>
+   <link rel="stylesheet" href="style.css">
 <body>
+    <nav class="top-menu">
+        <ul>
+            <li><a href="index.html">Hlavní</a></li>
+            <li><a href="Login.html">Login</a></li>
+            <li><a href="WO.html">Výpis</a></li>
+        </ul>
+    </nav>
     <h1>TADY BUDE SUPPORT SYSTEM</h1>
 </body>
 </html>
