--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             <li><a href="index.html">Hlavní</a></li>
             <li><a href="Login.html">Login</a></li>
             <li><a href="WO.html">Výpis</a></li>
+            <li><a href="table2.php">Tabulka</a></li>
         </ul>
     </nav>
     <h1>TADY BUDE SUPPORT SYSTEM</h1>
