--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
             <li><a href="index.html">Hlavní</a></li>
             <li><a href="Login.html">Login</a></li>
             <li><a href="WO.html">Výpis</a></li>
-            <li><a href="table2.php">Tabulka</a></li>
+            <li><button type="button", onclick="window.location.href = 'damian10012.github.io/SupportSystem/table2.php'">Tabulka</button></li>
         </ul>
     </nav>
     <h1>TADY BUDE SUPPORT SYSTEM</h1>
     <h2>Pogu</h2>
 </body>
 </html>
+<!--<a href="table2.php">Tabulka</a>-->
