--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <li><a href="index.html">Hlavní</a></li>
             <li><a href="Login.html">Login</a></li>
             <li><a href="WO.html">Výpis</a></li>
-            <li><button type="button", onclick="window.location.href = 'damian10012.github.io/SupportSystem/table2.php'">Tabulka</button></li>
+            <li><button type="button", onclick="window.location.href = 'table2.php'">Tabulka</button></li>
         </ul>
     </nav>
     <h1>TADY BUDE SUPPORT SYSTEM</h1>
