Updating all *.php

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <ul>
             <li><a href="index.html">Hlavní</a></li>
             <li><a href="Login.html">Login</a></li>
-            <li><a href="WO.html">Výpis</a></li>
+            <li><a href="WO.php">Výpis</a></li>
             <li><button type="button", onclick="window.location.href = 'table2.php'">Tabulka</button></li>
         </ul>
     </nav>
