--- a/index.html
+++ b/index.html
@@ -4,17 +4,24 @@
    <meta charset="UTF-8">
    <title>Budoucí Support System</title>
    <link rel="stylesheet" href="style.css">
+   </head>
 <body>
     <nav class="top-menu">
         <ul>
             <li><a href="index.html">Hlavní</a></li>
             <li><a href="Login.html">Login</a></li>
             <li><a href="WO.php">Výpis</a></li>
-            <li><button type="button", onclick="window.location.href = 'table2.php'">Tabulka</button></li>
+            <li><a href='table2.php'>Tabulka</button></li>
         </ul>
     </nav>
     <h1>TADY BUDE SUPPORT SYSTEM</h1>
-    <h2>Pogu</h2>
+    <div class="bla">
+    <h2>Kontakty</h2>
+
+    <br>
+    <br>
+    Miloslav Penculíno
+    </div>
+    
 </body>
 </html>
-<!--<a href="table2.php">Tabulka</a>-->
